# MINI-PROJECT-2

sev-cv/: LICENSE  MATH.md  README.md  SEV-CV_Math_Explainer.ipynb  SEV_CV_Colab_Train.ipynb  pyproject.toml
sev-cv/configs/baselines/: cifar10_phase0.yaml
sev-cv/scripts/: train_cifar10_tf.py
sev-cv/src/sevcv/: __init__.py
sev-cv/src/sevcv.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sev-cv/src/sevcv/data/: __init__.py  cifar10.py  coco2017.py  factory.py
sev-cv/src/sevcv/evolution/: controller.py
sev-cv/src/sevcv/models/: __init__.py  discriminator.py  generator.py
sev-cv/src/sevcv/scripts/: train_cifar10_tf.py  train_demo.py
sev-cv/src/sevcv/train/: trainer.py
